# Image-Filter-Pipeline

./: .gitignore  CMakeLists.txt  Notes.txt  README.md
.cache/clangd/index/: filters_cpu.cpp.7FF97C2458F20583.idx  filters_cpu.hpp.4E72FABACB5343A3.idx  main.cpp.1C5CF5EBA50486C8.idx  pipeline.cpp.EEBC65BC0F90B993.idx  pipeline.hpp.456C1534762D5EDF.idx  utils.hpp.02640E19DA316E6A.idx  workspace.hpp.CC8CAE48E7300B36.idx
Notes/: day2.txt  day3.txt  day4.txt  day5.txt  day6.txt
include/: filters_cpu.hpp  pipeline.hpp  utils.hpp  workspace.hpp
src/: filters_cpu.cpp  main.cpp  pipeline.cpp
